--- a/SpringmvcSpringMybatis/pom.xml
+++ b/SpringmvcSpringMybatis/pom.xml
@@ -40,7 +40,15 @@
 	</properties>
 
 	<!-- 声明项目需要的依赖组件 -->
+
 	<dependencies>
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+			<scope>runtime</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
@@ -196,7 +204,7 @@
 	</dependencies>
 
 	<build>
-		
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
