--- a/SpringmvcSpringMybatis/pom.xml
+++ b/SpringmvcSpringMybatis/pom.xml
@@ -201,6 +201,15 @@
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 		</dependency>
+		
+	<!-- https://mvnrepository.com/artifact/taglibs/standard -->
+<dependency>
+    <groupId>taglibs</groupId>
+    <artifactId>standard</artifactId>
+    <version>1.1.2</version>
+</dependency>
+		
+		
 	</dependencies>
 
 	<build>
